--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,13 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.1.3",
+        "php": "^8.1",
         "ext-json": "*",
-        "barryvdh/laravel-dompdf": "^0.9.0",
+        "barryvdh/laravel-dompdf": "^1.0.0",
         "doctrine/dbal": "^2.12.1",
-        "fideloper/proxy": "~4.0",
         "jacobbennett/pjax": "~1.0",
         "kyslik/column-sortable": "6.*",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^9.0",
         "laravel/helpers": "^1.5",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
@@ -20,15 +19,16 @@
         "predis/predis": "^1.1",
         "rats/zkteco": "^002.0",
         "simplesoftwareio/simple-qrcode": "~4",
-        "spatie/laravel-activitylog": "^3.0",
+        "spatie/laravel-activitylog": "^4.0",
         "yajra/laravel-datatables": "^1.5",
-        "yajra/laravel-datatables-html": "^4.0"
+        "yajra/laravel-datatables-html": "^4.0",
+        "spatie/laravel-ignition": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.0",
         "symfony/thanks": "^1.0"
     },
