--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "laravelcollective/html": "^6.0",
         "predis/predis": "^1.1",
         "rats/zkteco": "^002.0",
-        "simplesoftwareio/simple-qrcode": "~4",
+        "simplesoftwareio/simple-qrcode": "^4.0",
         "spatie/laravel-activitylog": "^4.0",
         "yajra/laravel-datatables": "^1.5",
         "yajra/laravel-datatables-html": "^4.0",
@@ -77,3 +77,4 @@
     "minimum-stability": "dev",
     "prefer-stable": true
 }
+
