--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "yajra/laravel-datatables-html": "^4.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
