--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "ext-curl": "*",
+        "ext-imagick": "*",
         "ext-json": "*",
         "barryvdh/laravel-dompdf": "^1.0.0",
         "codedge/laravel-fpdf": "^1.9",
@@ -18,6 +19,7 @@
         "laravel/helpers": "^1.5",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "maatwebsite/excel": "^3.1",
         "phpmailer/phpmailer": "^6.8",
         "picqer/php-barcode-generator": "^2.2",
         "predis/predis": "^1.1",
@@ -32,8 +34,7 @@
         "spatie/pdf-to-image": "^2.2",
         "thiagoalessio/tesseract_ocr": "^2.13",
         "yajra/laravel-datatables": "^1.5",
-        "yajra/laravel-datatables-html": "^4.0",
-        "ext-imagick": "*"
+        "yajra/laravel-datatables-html": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
